[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Main/Title.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/titleBG.png" type="Texture" id=2]
[ext_resource path="res://Images/titleText.png" type="Texture" id=3]
[ext_resource path="res://Images/numOfPlayersText.png" type="Texture" id=4]
[ext_resource path="res://Images/numOfPlayers1Text.png" type="Texture" id=5]
[ext_resource path="res://Images/numOfPlayers2Text.png" type="Texture" id=6]
[ext_resource path="res://Images/numOfPlayers3Text.png" type="Texture" id=7]
[ext_resource path="res://Images/numOfPlayers4Text.png" type="Texture" id=8]
[ext_resource path="res://Images/PressStartTo.png" type="Texture" id=9]
[ext_resource path="res://Images/BeginYourStory.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Main/FallingLeaves.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "titleIn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("titleText:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2420, 190 ), Vector2( 960, 190 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "showTitleText"
} ]
}

[sub_resource type="AudioStreamSample" id=2]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.466667, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0.0390625, 1, 1, 0.431396, 0, 0.445313, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
gravity = Vector3( -50, 10, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = 1.05
orbit_velocity = 0.25
orbit_velocity_random = 1.0
color_ramp = SubResource( 4 )

[node name="TitleRoot" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/titleIn = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 2 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )

[node name="titleText" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 2420, 190 )
texture = ExtResource( 3 )

[node name="numOfPlayersText" type="Sprite" parent="."]
visible = false
light_mask = 0
position = Vector2( 340, 630 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="numOfPlayers1Text" type="Sprite" parent="numOfPlayersText"]
light_mask = 0
position = Vector2( -60, 59 )
texture = ExtResource( 5 )

[node name="numOfPlayers2Text" type="Sprite" parent="numOfPlayersText"]
light_mask = 0
position = Vector2( -10, 55 )
texture = ExtResource( 6 )

[node name="numOfPlayers3Text" type="Sprite" parent="numOfPlayersText"]
light_mask = 0
position = Vector2( 40, 55 )
texture = ExtResource( 7 )

[node name="numOfPlayers4Text" type="Sprite" parent="numOfPlayersText"]
light_mask = 0
position = Vector2( 90, 55 )
texture = ExtResource( 8 )

[node name="Particles2D" type="Particles2D" parent="numOfPlayersText"]
light_mask = 0
position = Vector2( -60, 55 )
amount = 100
process_material = SubResource( 5 )

[node name="PressStartTo" type="Sprite" parent="."]
visible = false
light_mask = 0
position = Vector2( 1600, 621.5 )
texture = ExtResource( 9 )

[node name="BeginYourStory" type="Sprite" parent="PressStartTo"]
light_mask = 0
position = Vector2( -40, 70 )
texture = ExtResource( 10 )

[node name="Timer1" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
autostart = true

[node name="Node2D" parent="." instance=ExtResource( 12 )]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
